# pyproject-config-reader

./: .gitignore  pyproject.toml
pyproject_config_reader/: reader.py
